test shift fix mobile

--- a/static/styles/extraExtraSmall.css
+++ b/static/styles/extraExtraSmall.css
@@ -305,10 +305,12 @@
 @media only screen and (max-width: 479px) and ((orientation: portrait) or (max-aspect-ratio: 1/1)) {
     .foreground {
         top: 32.5vh;
+        top: 32.5svh;
     }
 
     .background {
         height: 100vh;
+        height: 100svh;
     }
 
     .sky-limit-text {
